[package]
name = "rust-tuyapi"
version = "0.1.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1"

log = "0.4"
num = "0.2"
hex = "0.3"
nom = "5.1"
num-derive = "0.3"
num-traits = "0.2"
serde_json = "1.0"
openssl = "0.10"
