[package]
name = "rust-tuyapi"
version = "0.1.0"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"
description = "This package is a rust port of the exellent NodeJS implementation by codetheweb for the Tuya API"
homepage = "https://github.com/EmilSodergren/rust-tuyapi"
repository = "https://github.com/EmilSodergren/rust-tuyapi"
license = "MIT"
licensefile = "LICENSE"
keywords = ["tuya", "smart home", "smart life"]

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
num = "0.3"
hex = "0.4"
nom = "5.1"
json = "0.12"
num-derive = "0.3"
num-traits = "0.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
openssl = "0.10"
base64 = "0.12"
md5 = "0.7"
lazy_static = "1.4"
