[package]
name = "rust-tuyapi"
version = "0.8.2"
authors = ["Emil Sodergren <EmilSodergren@users.noreply.github.com>"]
edition = "2018"
description = "This package is a rust port of the exellent NodeJS implementation by codetheweb for the Tuya API"
homepage = "https://github.com/EmilSodergren/rust-tuyapi"
repository = "https://github.com/EmilSodergren/rust-tuyapi"
license-file = "LICENSE"
keywords = ["tuya", "smarthome", "smartlife"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
base64 = "0.21"
hex = "0.4"
json = "0.12"
lazy_static = "1.4"
log = "0.4"
md5 = "0.7"
nom = "7.1"
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
